# hcpya_preprocess

./: .gitignore  README.md  pyproject.toml  setup_uv.sh
scripts/: completion_report.py  config.json  make_run_config.sh  prepost_proc_report.py  run_completionreport.sh
scripts/fmriprep/: README.md  dataset_description.json  resources_fmriprep.sh  submit-alt_fmriprep.sh  submit_fmriprep.sh  task_list.json  template.fmriprep
scripts/fmriprep/misc/: resources_fmriprep_v23_1_4_2YearFollowUpYArm1.sh  submit_fmriprep_v23_1_4_sess.sh
scripts/fmriprep/misc/compare_newdat/: check_new_data.sh
scripts/fmriprep/post_preprocessing_checks/compare_s3/: checks3_fmriprep_filesfolders.sh
scripts/fmriprep/post_preprocessing_checks/qc_sdc-similarity/: check_finished_list.sh  create_peristim.py  make_runs.sh  resources_check.sh  similarity_check.py  submit_check.sh  (+1 more)
scripts/fmriprep/tmp/: tmp_resources_submit_0-20.sh
scripts/mriqc/: README.md  dataset_description.json  resources_mriqc.sh  resubmit_mriqc.sh  submit_mriqc.sh  template.mriqc
scripts/mriqc/group_mriqc/: resources_mriqc.sh  run_grp.sh  submit_grp.sh  submit_mriqc.sh  submit_mriqc_alt.sh
scripts/mriqc/tmp/: tmp_resources_resubmit.sh  tmp_resources_submit_0-5.sh  tmp_resources_submit_201-1093.sh
scripts/sync_s3_to_endpoint/: README.md  rclone_from_s3.sh
scripts/taskbold/: README.md  check_s3outputs.sh  glm_utils.py  grp_conscoords.json  input_taskmodel.json  make_glmjob.sh  pilot_bold-models.ipynb  prep_eventsdata.py  run_subjectmodels.py  s3_task-glm_file-counts.csv  submit_glmjobs.sh  template.glms
scripts/taskevents/: README.md  download_eprimehcp.py  make_schematics.py  preproc_taskeprime.py  preproc_util.py  task_summaries.ipynb
scripts/taskevents/info_emotion/: README.md  gen_imgsvg.py  task-emotion_events.json
scripts/taskevents/info_gamble/: README.md  gen_imgsvg.py
scripts/taskevents/info_gambling/: README.md  task-gambling_events.json
scripts/taskevents/info_language/: README.md  gen_imgsvg.py  task-language_events.json
scripts/taskevents/info_motor/: README.md  gen_imgsvg.py  task-motor_events.json
scripts/taskevents/info_relational/: README.md  gen_imgsvg.py  task-relational_events.json
scripts/taskevents/info_social/: README.md  gen_imgsvg.py  task-social_events.json
scripts/taskevents/info_wm/: README.md  gen_imgsvg.py  task-WM_events.json
scripts/xcp_d/: README.md  dataset_description.json  resources_xcpd.sh  submit_xcpd.sh  template.xcp_d
scripts/xcp_d/xcpd_qc-output/: make_runs.sh  qc_xcpd.py  resources_xcpd.sh  template.xcp_d
(+14 files in other folders)
