[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcpya_preprocess"
version = "0.1.0"
description = "HCP-Youth BOLD Pre/Post-Processing"
authors = [
    {name = "Michael Demidenko", email = "demidenko.michael@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "matplotlib",
    "nibabel",
    "nilearn",
    "nipype",
    "pandas",
    "seaborn",
    "ptitprince",
    "pyrelimri",
    "svgwrite",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools]
packages = ["scripts"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
